recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:6: error: reassignment to val
    steps = steps - 1
          ^Spiral:7: error: reassignment to val
    length = length + increment
           ^Spiral:8: error: not found: value lenght
    spiral(steps, angle, lenght, increment)
                         ^